<resources>
    <string name="app_name">MobileSafe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="version">1.0</string>
    <string name="tv_main_text">主界面</string>
    <string name="main">主界面</string>
    <string name="name1">手机防盗</string>
    <string name="main_title">XX手机卫士</string>
    <string name="lost_label">手机防盗</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_repwd">请输入确认密码</string>
    <string name="done">确定</string>
    <string name="cancel">取消</string>
    <string name="tv_lost_setup_1_title">1.欢迎使用防盗设置</string>
    <string name="tv_lost_setup_1_info">您的手机防盗卫士：</string>
    <string name="tv_lost_setup_1_li_1">sim卡变更报警</string>
    <string name="tv_lost_setup_1_li_2">GPS追踪</string>
    <string name="tv_lost_setup_1_li_3">销毁数据</string>
    <string name="tv_lost_setup_1_li_4">远程锁屏</string>
    <string name="tv_lost_setup_1_label">防盗向导01</string>
    <string name="tv_lost_setup_2_title">2.手机卡绑定 (sim卡的序列号)</string>
    <string name="tv_lost_setup_3_title">3.设置安全号码</string>
    <string name="tv_lost_setup_4_title">4.设置完成</string>
    <string name="tv_lost_setup_2_info">每次开机启动发现手机sim改变自动发送报警短信:</string>
    <string name="bt_lost_setup_2_bind">绑定</string>
    <string name="tv_lost_setup_3_info">sim卡更换后,可以把报警发送到该安全号码上:</string>
    <string name="bt_lost_setup_3_opencontacts">选择联系人</string>
    <string name="tv_lost_setup_4_info">您的手机设置已经完成：</string>
    <string name="tx_lost_setup_4_opensafe">保护未开启</string>
    <string name="et_lost_setup_3_safephone">请输入手机号或选择联系人</string>
    <string name="safe_name">安全手机号码:</string>
    <string name="to_setup">进入设置向导</string>
    <string name="is_open">防盗保护已经开启：</string>
    <string name="to_setup_again">重新进入设置向导</string>
    <string name="plase_input_something">请输入内容</string>
    <string name="send">发送</string>
    <string name="tv_msg">消息</string>
    <string name="tv_setting">设置</string>
    <string name="tv_content">联系人</string>
    <string name="tv_message_content">这是消息界面</string>
    <string name="tv_content_content">联系人界面</string>
    <string name="tv_setting_content">这是设置界面</string>
    <string name="wx_label">微信</string>
    <string name="wx_menu_search">搜索</string>
    <string name="tv_update">软件管理</string>
    <string name="tv_query_number">手机归属地查询</string>
    <string name="et_query_number">请输入查询的手机号</string>
    <string name="bt_query">查询</string>
    <string name="addressdburl">http://192.168.1.44:8080/address.db</string>
    <string name="wiki_title">维基互联</string>
    <string name="username">用户名</string>
    <string name="nav_home">首页</string>
    <string name="nav_message">消息</string>
    <string name="to_main">主界面</string>
    <string name="atools_title">高级工具</string>
    <string name="phone_address">来电归属地显示：</string>
    <string name="address_drag">设置来电归属地位置</string>
    <string name="address_style">设置来电归属地样式</string>
    <string name="address_drag_desc">按住提示框拖动到任意位置\n返回立即生效</string>
    <string name="add_black_number">添加黑名单</string>
    <string name="to_list">ListView</string>
    <string name="show_notify">显示通知</string>
    <string name="black_number_null">您还没有添加黑名单</string>
    <string name="et_add_black_number">请输入要添加的号码</string>
    <string name="et_add_black_name">请输入名称</string>
    <string name="cb_call_intercept">电话拦截</string>
    <string name="cb_sms_intercept">短信拦截</string>
    <string name="add_black">添加</string>
    <string name="add_from_contacts">从联系人添加</string>
    <string name="hedan_title">HeDan</string>
    <string name="id_sms_backup">短信备份</string>
    <string name="id_sms_restore">短信还原</string>
</resources>
