<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip">

    <TextView
        style="@style/text_title_style"
        android:text="@string/tv_lost_setup_2_title" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dip"
        android:layout_marginTop="8dip"
        android:minWidth="100dip"
        android:src="@drawable/devide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="vertical">

        <TextView
            style="@style/text_info_style"
            android:text="@string/tv_lost_setup_2_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_lost_setup_2_bind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/bt_lost_setup_2_bind"
                    />

               <CheckBox
                   android:id="@+id/cb_lost_setup_2_bind"
                   android:layout_weight="1"
                   android:text="@string/bt_lost_setup_2_bind"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            style="@style/img_status_off_style"/>
        <ImageView
            style="@style/img_status_on_style"/>
        <ImageView
            style="@style/img_status_off_style"/>
        <ImageView
            style="@style/img_status_off_style"/>
    </LinearLayout>
</LinearLayout>
